# agent

./: .gitignore  DATA_COLLECTOR_LOOP_MODE.md  PROJECT_SUMMARY.md  README.md  STRUCTURE.md  design.md  fastmcp_sse_client.py  gradio_app.py  llm_client.py  myhia.ipynb  myidea.txt  pyproject.toml  send_request.py  send_request_simple.py  sql_query_service.py  test.json  test.txt
src/agents/: agents.py  langgraph_agent.py
src/config/: __init__.py  config.py  config.template.yaml  config_manager.py  prompt_config.py
src/models/: agent_state.py  models.py  todo_item.py
src/nodes/: data_collector_node.py  executor_node.py  judge_node.py  nodes.py  planner_node.py  summary_node.py  task_selector_node.py
src/services/: mcp_service.py
src/utils/: end_tag_parser.py  prompt_builder.py  result_formatter.py  routing.py  tool_call_manager.py  tool_executor.py  utils.py
