[project]
name = "langgraph-agent"
version = "0.1.0"
description = "LangGraph-based Agent Framework"
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=0.1.0",
    "pyyaml>=6.0",
    "requests>=2.31.0",
    "langgraph>=0.2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"